--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,24 @@
     "java.debug.settings.onBuildFailureProceed": true,
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.base.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.controls.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.fxml.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.graphics.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.media.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.swing.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx.web.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\javafx-swt.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\jdk.jsobject.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\jfx.incubator.input.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-25\\lib\\jfx.incubator.richtext.jar"
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx.base.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx.controls.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx.fxml.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx.graphics.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-2\\lib\\javafx.media.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx.swing.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx.web.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\javafx-swt.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\jdk.jsobject.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\jfx.incubator.input.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21\\lib\\jfx.incubator.richtext.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.base.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.controls.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.fxml.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.graphics.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.media.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.swing.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx.web.jar",
+        "c:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\\javafx-swt.jar"
     ]
 }
