--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,24 @@
     "configurations": [
         {
             "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "helloworldfx.App",
+            "projectName": "CURSO_JAVA25_1_386f23b2",
+            "vmArgs": "--module-path \"C:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\" --add-modules javafx.controls,javafx.fxml"
+
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "secao28.App",
+            "projectName": "CURSO_JAVA25_1_386f23b2",
+            "vmArgs": "--module-path \"C:\\Program Files\\Java\\javafx-sdk-21.0.9\\lib\" --add-modules javafx.controls,javafx.fxml"
+
+        },
+        {
+            "type": "java",
             "name": "Regex",
             "request": "launch",
             "mainClass": "secao25.Regex",
